--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.4.1
 dj-database-url==0.5.0
 Django==3.2.7
 django-multiselectfield==0.1.12
+gunicorn==20.1.0
 Pillow==8.3.2
 psycopg2-binary==2.9.1
 pytz==2021.1
