--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 asgiref==3.4.1
+boto3==1.18.59
+botocore==1.21.59
 dj-database-url==0.5.0
 Django==3.2.7
 django-multiselectfield==0.1.12
+django-storages==1.12.1
 gunicorn==20.1.0
+jmespath==0.10.0
 Pillow==8.3.2
 psycopg2-binary==2.9.1
 pytz==2021.1
+s3transfer==0.5.0
 sqlparse==0.4.2
