--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ boto3==1.18.59
 botocore==1.21.59
 dj-database-url==0.5.0
 Django==3.2.7
+django-countries==7.2.1
 django-multiselectfield==0.1.12
 django-storages==1.12.1
 gunicorn==20.1.0
