--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ botocore==1.21.59
 dj-database-url==0.5.0
 Django==3.2.7
 django-countries==7.2.1
+django-extensions==3.1.5
 django-multiselectfield==0.1.12
 django-storages==1.12.1
 gunicorn==20.1.0
 jmespath==0.10.0
 Pillow==8.3.2
 psycopg2-binary==2.9.1
+pydotplus==2.0.2
 pytz==2021.1
 s3transfer==0.5.0
 sqlparse==0.4.2
